# meteorology_calculator

./: .gitignore  __init__.py  pyproject.toml  setup.py
anomaly/: __init__.py  lof_anomaly_dectector.py
heatwaves/: heatwave_absolute_calculator.py  heatwave_calculator.py  heatwave_daily_percentile_calculator.py  heatwave_percentile_calculator.py
src/: meteorology_calculator.py
src/anomaly/: anomaly_detector.py  autoencoder_anomaly_detector.py  isolation_forest_anomaly_detector.py
src/coldwaves/: coldwave_calculator.py
src/meteorology_calculator/anomaly/: anomaly_detector.py  dbscan_anomaly_detector.py  oneclassSVM_anomaly_detector.py
src/meteorology_calculator/coldwaves/: __init__.py  coldwave_absolute_calculator.py  coldwave_calculator.py  coldwave_daily_percentile_calculator.py  coldwave_percentile_calculator.py
src/meteorology_calculator/heatwaves/: __init__.py  heatwave_absolute_calculator.py  heatwave_calculator.py  heatwave_daily_percentile_calculator.py  heatwave_percentile_calculator.py
src/meteorology_calculator/plotting/: __init__.py  plotting_calculator.py
src/meteorology_calculator/utils/: utils.py
src/meteorology_calculator/z_score/: z_score_calculator.py  z_score_previous_data.py
src/z_score/: __init__.py  z_score_selected_data.py
z_score/: z_score_all_data.py  z_score_calculator.py
